# pyjpi

./: .bandit.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements-test.txt
.badges/: coverage.json  radon.json
.github/workflow/: new_tag.yml  verify.yml
.github/workflows/: _build.yml  _check_exists.yml  _complexity.yml  _diag.yml  _pytest_coverage.yml  _release.yml  _shellcheck.yml  _testpypi.yml  _tests.yml  new_tag.yml  release.yml  test.yml  test_cov.yml
pyjpi/: __init__.py  library.py
scripts/: run-in-env.sh
tests/: __init__.py  const.py  test_jpi_init.py  test_lib_battinfo.py  test_lib_get.py  test_lib_getdevicename.py
