[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyJPI"
version = "0.1.24"
authors = [
  { name="Pierre Wieser", email="p.wieser@trychlos.org" },
]
description = "A library to access Android devices which run JPI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/trychlos/pyjpi"
Issues = "https://github.com/trychlos/pyjpi/issues"
